Fixed an unintended removal of gaps between save bottoms in item windows

--- a/FrontEnd/Modules/Base/Css/masterpage.css
+++ b/FrontEnd/Modules/Base/Css/masterpage.css
@@ -1138,7 +1138,9 @@ footer .meta-data label:hover {
 	display: none;
 }
 footer .actions {
-	margin-left: auto;
+	display: flex;
+	justify-content: end;
+	gap: 8px;
 }
 footer .actions button {
 	white-space: nowrap;
